Страница "Маркет", "Автомобили" + мелкие правки

--- a/www/community.html
+++ b/www/community.html
@@ -103,145 +103,56 @@
         <div class="row">
 
           <section class="l-community col xs-9">
-            <div class="block b-community">
-              <div class="b-main-title">
+            <div class="block b-community paginator">
+
+              <div class="b-main-title title-search">
                 <h1>Сообщество</h1>
                 <div class="b-filter__switch">
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-status="all">Все</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-status="popular">Популярные</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-status="new">Новые</a>
+                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="news">Все</a>
+                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="blogs">Популярные</a>
+                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="posts">Новые</a>
+                </div>
+                <div class="b-filter__find">
+                  <input type="text" name="search">
                 </div>
               </div>
-              <div class="paginator">
-                <div class="b-community__container pagin-container pagin-wrap">
 
-                    <!-- <div class="b-community__item item">
-                      <img src="img/temp/auto/1.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div> -->
-                    
-                    <!-- <div class="b-community__item item">
-                      <img src="img/temp/auto/2.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                   <div class="b-community__item item">
-                      <img src="img/temp/auto/3.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/4.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/5.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/6.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/7.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/8.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/9.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/1.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
-                    <div class="b-community__item item">
-                      <img src="img/temp/auto/2.png" alt="">
-                      <p class="text">
-                        <a href="#" class="b-community__item-name">Alexis.Sanches</a>
-                        <span>из города</span>
-                        <a href="#" class="b-community__item-city">Barcelona</a>
-                        <span>ездит на</span>
-                        <a href="#" class="b-community__item-auto">Audi Q7 Quattttttrooo!</a>
-                      </p>
-                    </div>
- -->
-                  </div>
+              <div class="b-community__container pagin-container pagin-wrap">
 
-                <!-- 
-                  Скрыть кнопку переключения класс .m-pagination_hide;
-                  Текущая страница пагинации класс .m-pagination-item_current;
-                -->
-                  <div class="b-new-auto__pagination controll">
-                   <span class="b-pagination-item item text m-pagination_prev m-pagination_hide"><<</span>
-                    <span class="b-pagination-item item text m-pagination-item_current">1</span>
-                    <span class="b-pagination-item item text">2</span>
-                    <span class="b-pagination-item item text">3</span>
-                    <span class="b-pagination-item item text">4</span>
-                    <span class="b-pagination-item item text m-pagination-item_next">>></span>
-                  </div>
-                </div>
+<!--                     <div class="b-community__item item">
+                      <img src="img/temp/auto/1.png" alt="">
+                      <div class="b-community__item-info text">
+
+                        <div class="b-community__item-avatar">
+                          <img src="img/temp/author/2.jpg" alt="">
+                        </div>
+
+                        <p>
+                          <a href="#" class="b-community__item-auto text">Audi Q7 Quattttttrooo!</a>
+                        </p>
+
+                        <p class="b-community__item-author">
+                          <a href="#" class="text">Alexis.Sanches</a>
+                          <a href="#" class="text ">Barcelona</a>
+                        </p>
+
+
+                      </div>
+                    </div>-->
+              </div>
+
+              <!-- 
+                Скрыть кнопку переключения класс .m-pagination_hide;
+                Текущая страница пагинации класс .m-pagination-item_current;
+              -->
+              <div class="b-new-auto__pagination controll">
+                <span class="b-pagination-item item text m-pagination_prev m-pagination_hide"><<</span>
+                <span class="b-pagination-item item text m-pagination-item_current">1</span>
+                <span class="b-pagination-item item text">2</span>
+                <span class="b-pagination-item item text">3</span>
+                <span class="b-pagination-item item text">4</span>
+                <span class="b-pagination-item item text m-pagination-item_next">>></span>
+              </div>
             </div>
           </section>
 
@@ -250,14 +161,19 @@
             <div class="block b-filter">
               <div class="b-filter-wrapp">
                 <h4><span class="all-community">256</span> сообществ</h4>
-                <h5><a href="#"><span class="new-company">12</span> новых</a></h5>
-                <div class="b-filter__switch">
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="auto">Авто</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="moto">Мото</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="driver">Водители</a>
-                </div>
+                <p class="text"><a href="#"><span class="new-company">12</span> новых</a></p>
 
                 <form class="b-filter__form" name="filter">
+
+                  <div class="b-add-car__form-item droplist">
+                    <input type="text" id="city" value="all" hidden>
+                    <span class="droplist-current text bold tab-input">Всe</span>
+                    <ul class="droplist-block">
+                      <li class="droplist-item text">Авто</li>
+                      <li class="droplist-item text">Мото</li>
+                      <li class="droplist-item text">Водители</li>
+                    </ul>
+                  </div>
 
                   <div class="b-add-car__form-item droplist">
                     <input type="text" id="city" value="all" hidden>
@@ -270,7 +186,7 @@
                   </div>
                   <div class="b-add-car__form-item droplist">
                     <input type="text" id="driver" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">Все водителя</span>
+                    <span class="droplist-current text bold tab-input">Пол</span>
                     <ul class="droplist-block">
                       <li class="droplist-item text">Парень</li>
                       <li class="droplist-item text">Девушка</li>
