--- a/www/main.html
+++ b/www/main.html
@@ -175,7 +175,7 @@
 
                   <div class="b-news__inner-item m-news__inner-item_blog">
                     <div data-name="Блоги">
-                      <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                      <img src="img/temp/auto/2.jpg" alt="" class="b-news__inner-item-img">
                     </div>
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
@@ -223,34 +223,7 @@
           <section class="l-mark col sm-1 order-xs-3 xs-12">
             <div class="block b-mark">
               <ul class="b-mark__list">
-                <!-- <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_toyota"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_shkoda"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_honda"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_lexus"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_chevrolet"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_vw"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_nissan"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_ford"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_toyota"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_shkoda"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_honda"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_lexus"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_chevrolet"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_vw"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_nissan"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_ford"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_ford"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_toyota"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_shkoda"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_honda"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_lexus"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_chevrolet"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_vw"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_nissan"></a></li>
-                <li><a href="#" class="b-mark__list-item m-mark__list-item_ford"></a></li> -->
+                <!-- <li><a href="#" class="b-mark__list-item m-mark__list-item_audi"></a></li>-->
               </ul>
             </div>
           </section>
