--- a/www/my-page.html
+++ b/www/my-page.html
@@ -167,15 +167,15 @@
                 <h3>Мои авто</h3>
                 <a href="add-my-car.html" class="button small">Добавить</a>
                 <div class="b-author__car-item">
-                  <img src="img/temp/auto/2.png" alt="">
+                  <img src="img/temp/auto/2.jpg" alt="">
                   <p><a href="#" class="text">Nissan Terrano 2.6L 200hp</a></p>
                 </div>
                 <div class="b-author__car-item">
-                  <img src="img/temp/auto/2.png" alt="">
+                  <img src="img/temp/auto/5.jpg" alt="">
                   <p><a href="#" class="text">Nissan Terrano 2.6L 200hp</a></p>
                 </div>
                 <div class="b-author__car-item">
-                  <img src="img/temp/auto/2.png" alt="">
+                  <img src="img/temp/auto/10.jpg" alt="">
                   <p><a href="#" class="text">Nissan Terrano 2.6L 200hp</a></p>
                 </div>
               </div>
