--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -118,7 +118,7 @@
                 <div class="b-ad__item item" data-top-item>
                   <div class="b-ad__item-img">
                     <img src="img/temp/11.jpg" alt="">
-                    <div class="b-ad__item-fav"></div>
+                    <div class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></div>
                   </div>
                   <div class="b-ad__item-info">
 
@@ -141,9 +141,9 @@
                 </div>
 
                 <div class="b-ad__item item" data-top-item>
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/12.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -166,9 +166,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/3.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -188,9 +188,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/4.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -212,9 +212,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/6.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -236,9 +236,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/5.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -259,9 +259,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/7.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -282,9 +282,9 @@
                   </p>
                 </div>
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/3.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -304,9 +304,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/9.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
@@ -330,9 +330,9 @@
                 </div>
 
                 <div class="b-ad__item item">
-                  <div class="b-ad__item-fav"></div>
                   <div class="b-ad__item-img">
                     <img src="img/temp/auto/6.jpg" alt="">
+                    <div class="b-ad__item-fav" data-message="Добавлено в избранное"></div>
                   </div>
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
